# Hunter888

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ANTI_CHEAT_ENHANCEMENT_SUMMARY.md  ARCHITECTURE_PROBLEMS.md  CLAUDE.md  DEPLOY.md  FRONTEND_UI_AUDIT.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.pilot.yml  docker-compose.prod.yml  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml  run_tests.sh
apps/api/alembic/: env.py
apps/api/alembic/versions/: 1377b3c5ac88_roleplay_v2_models.py  20260320_001_add_progress_tables.py  20260320_002_add_emotion_trap_tables.py  20260320_003_add_client_communication_module.py  20260320_004_add_push_subscriptions.py  20260321_001_add_avatar_url.py  20260321_002_add_pvp_battle_tables.py  20260321_003_add_reputation_table.py  20260321_004_add_roleplay_v5_tables.py  20260321_gcm_add_game_client_events.py  20260322_001_add_training_session_v5_columns.py  20260322_002_add_user_friendships.py  20260323_001_add_pgvector_embedding.py  20260323_002_add_knowledge_quiz_tables.py  20260324_001_expand_legal_knowledge_chunks.py  20260324_002_add_arena_rating_type.py  20260324_003_add_behavioral_intelligence.py  20260324_arena_pvp_fields.py  20260401_001_add_rag_feedback_loop.py  20260402_001_create_user_answer_history.py  20260402_002_enhance_bracket_forfeit_scheduling.py  20260402_003_audit_fixes_game_director_and_indexes.py  20260402_004_add_message_composite_index.py  20260402_004a_create_missing_tables.py  20260402_005_phase3_fk_indexes_and_cascades.py  20260404_006_constructor_v2_columns.py  20260404_007_checkpoint_system.py  20260404_008_scenarios_60.py  20260404_009_scoring_v6_skills.py  20260404_010_achievements_v2.py  20260404_011_emotion_v6.py  20260404_012_pvp_modes.py  20260404_013_pve_modes.py  20260404_014_knowledge_v2.py  20260404_015_tournaments_v2.py  20260404_016_rating_v2.py  20260404_017_integration.py  20260404_018_progression_v2.py  20260404_019_prompts_progression.py  20260407_020_manager_wiki.py  (+85 more)
apps/api/app/: .env.example  config.py  database.py  main.py
apps/api/app/api/: admin_knowledge.py  admin_users.py  ai_quality.py  analytics.py  arena_lifelines.py  arena_powerups.py  auth.py  behavior.py  client_domain_ops.py  clients.py  consent.py  custom_characters.py  dashboard.py  game_crm.py  gamification.py  health.py  home.py  integrations.py  knowledge.py  knowledge_reports.py  manager_wiki.py  methodologist.py  methodology.py  morning_drill.py  navigator.py  pending_events.py  persona_view.py  progression.py  prompts.py  pvp.py  reviews.py  rop.py  router.py  scenarios.py  (+8 more)
apps/api/prompts/: aggressive_v1.md  anxious_v1.md  constitution.md  guardrails.md  reality_ru_2026.md  skeptic_v1.md
apps/api/scripts/: call_golden_smoke.py  cleanup_analytics.py  client_domain_ops.py  create_tables.py  debug_tts.py  extract_lorebook.py  knowledge_ttl_sweep.py  reembed_legacy_to_gemini.py  seed_checkpoints.py  seed_db.py  seed_levels.py  seed_lorebook.py  seed_mc_choices.py  seed_narrative_traps.py  seed_roleplay.py  seed_scenarios.py  seed_scripts.py  seed_traps.py  seed_voices.py
apps/api/tests/: conftest.py  test_adaptive_difficulty.py  test_adaptive_temperature.py  test_admin_patch_user.py  test_admin_task_followups.py  test_ai_coach_team_scope.py  test_ai_personalities_pr7.py  test_ai_quality.py  test_ai_tell_scrubber.py  test_anti_cheat.py  test_anti_cheat_realtime.py  test_api_endpoints.py  test_api_health.py  test_arena_bus.py  test_arena_bus_consumer.py  test_arena_bus_dual_write.py  test_arena_chunk_invariants.py  test_arena_chunk_schema.py  test_arena_chunk_usage_log.py  test_arena_content_trace.py  test_arena_difficulty.py  test_arena_envelope.py  test_arena_hotfix_2026_05_04.py  test_arena_knowledge_auto_publish.py  test_arena_metrics.py  test_arena_pr2_audit_softdelete.py  test_arena_pr4_perf.py  test_arena_pr5_observability.py  test_attachment_invariants.py  test_attachment_pipeline.py  test_attachment_pipeline_training_material.py  test_attachment_security.py  test_attachment_storage.py  test_audit_fixes.py  test_auth.py  test_auth_refresh_concurrency.py  test_auth_v2.py  test_between_call_intelligence.py  test_between_call_narrator.py  test_call_arc.py  (+173 more)
(+1176 files in other folders)
